# Musicgen-LoRA-Lab

./: ._作业思路.docx  .gitignore  MusicGen-LoRA-完整方案.md  README.md  infer_eval.sh  pyproject.toml  requirements.txt  start.sh  作业思路.docx  实施流程.md  项目通俗说明.md
reports/: lora_training_and_deployment_report.md  output_audit.md
scripts/: evaluate_audio.py  generate_baseline.py  generate_lora.py  make_listening_test.py  preprocess_gtzan.py  run_platform.sh  train_lora.py
