[project]
name = "musicgen-lora-lab"
version = "0.1.0"
description = "MusicGen-Melody audio continuation and LoRA adaptation experiments on GTZAN."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch>=2.1,<2.2",
    "torchaudio>=2.1,<2.2",
    "audiocraft==1.3.0",
    "transformers>=4.40,<5",
    "peft>=0.10,<0.18",
    "accelerate>=0.28,<2",
    "librosa>=0.10.1,<0.12",
    "soundfile>=0.12.1,<0.15",
    "pandas>=2.0,<3",
    "numpy>=1.24,<2.0",
    "matplotlib>=3.7,<4",
    "seaborn>=0.12,<0.14",
    "scipy>=1.10,<2",
    "scikit-learn>=1.2,<2",
    "tqdm>=4.65,<5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
]

[tool.uv]
package = false
override-dependencies = [
    # audiocraft 1.3.0 pins av==11.0.0, which often forces a source build and
    # requires system FFmpeg/pkg-config headers. Newer PyAV wheels are available
    # on common Linux GPU images and are sufficient for this project.
    "av>=12.0.0",
]
